atividade de passo a passo

--- a/dev-cs.html
+++ b/dev-cs.html
@@ -9,7 +9,8 @@
 <body>
     <h1> 🚀 Passo-a-passo para se tornar um Dev 🚀 </h1>
     <p>Comece aprendendo a programar. E eu posso te ajudar:</p>
-    <img src="https://raw.githubusercontent.com/ermogenes/aulas-programacao-web/master/content/logo-dev-cs.png" alt="imagem do github sobre a atividade que esta sendo executada.">
+    <a href="https://github.com/ermogenes/aulas-programacao-csharp/" target="_blank">
+    <img src="logo-dev-cs.png " alt=" logo do c#"></a>
     <p>Agora,<a href="dev-web.html">continue seus estudos</a>.</p>
     <p><a href="index.html">Volta</a>.</p>
     <hr><p>&copy; <a href=https://github.com/joose2>José Helder </a> - Mongaguá-2023</p>
