--- a/dev-web.html
+++ b/dev-web.html
@@ -9,7 +9,8 @@
 <body>
     <h1>🚀 Passo-a-passo para se tornar um Dev 🚀</h1>
     <p>É hora de aprender a programar para a Web!</p>
-    <img src="https://raw.githubusercontent.com/ermogenes/aulas-programacao-csharp/master/content/logo-dev-web.png" alt="imagem do github sobre a atividade que esta sendo executada.">
+    <a href="https:github.com/ermogenes/aulas-programacao-web" target="_blank">
+    <img src="logo-dev-web.png" targent="_blank"> 
     <p>Já terminou?<a href="objetivo.html">Veja o que te espera</a>.</p>
     <p><a href="dev-cs.html">Volta</a>|<a href="index.html">Volta ao inicio</a</p>
     <hr><p>&copy; <a href=https://github.com/joose2>José Helder </a> - Mongaguá-2023</p>
